# mcp-device-management

./: CHANGELOG.md  Cargo.toml  README.md  mcp-server.toml
docs/: api-reference.md
src/: fleet.rs  intune.rs  jamf.rs  kandji.rs  local.rs  main.rs  platform.rs  server.rs  store.rs  types.rs
