[package]
name = "mcp-device-management"
version = "1.2.0"
edition = "2021"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "Device Management MCP Server — real local system detection + Intune/Jamf/Fleet/Kandji backends"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-device-management"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "device", "endpoint", "inventory", "management"]
categories = ["development-tools"]
readme = "README.md"

[features]
default = ["local"]
local = []
intune = ["dep:reqwest"]
jamf = ["dep:reqwest"]
fleet = ["dep:reqwest"]
kandji = ["dep:reqwest"]
all-backends = ["local", "intune", "jamf", "fleet", "kandji"]

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros", "elicitation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
